<resources>
    <string name="app_name">Open Weather App</string>
    <string name="fragment_home_type_location_label">Type the location</string>
    <string name="fragment_home_load_forecast">Load forecast</string>
    <string name="fragment_home_current_location">Get current location</string>
    <string name="fragment_home_btn_details">Details</string>
    <string name="fragment_home_btn_sun_info">Sun Info</string>
    <string name="fragment_details_tv_temperature">Temperature</string>
    <string name="fragment_details_tv_feels_like">Feels like</string>
    <string name="fragment_details_tv_humidity">Humidity</string>
    <string name="fragment_details_btn_back">Back</string>
    <string name="location_error_message">Failed to fetch data</string>
    <string name="fragment_home_forecast_today">Current weather at %s</string>
    <string name="fragment_home_sun_info">Sun Information</string>
    <string name="fragment_home_sunrise_sunset">Sunrise: %s\nSunset: %s</string>
</resources>