<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp">

    <TextView
        android:id="@+id/tv_forecast_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="'Location' forecast details" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forecast_details">

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="4dp"
            android:text="@string/fragment_details_tv_temperature"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_temperature"
            app:layout_constraintEnd_toStartOf="@id/tv_temperature_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_temperature_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_temperature"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Info" />


        <TextView
            android:id="@+id/tv_feels_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:drawablePadding="4dp"
            android:text="@string/fragment_details_tv_feels_like"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_temperature_feels_like"
            app:layout_constraintEnd_toStartOf="@id/tv_feels_like_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

        <TextView
            android:id="@+id/tv_feels_like_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_feels_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_feels_like"
            app:layout_constraintTop_toBottomOf="@id/tv_temperature_info"
            tools:text="Info" />


        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:drawablePadding="4dp"
            android:text="@string/fragment_details_tv_humidity"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_humidity"
            app:layout_constraintEnd_toStartOf="@id/tv_humidity_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_feels_like" />

        <TextView
            android:id="@+id/tv_humidity_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_humidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_humidity"
            app:layout_constraintTop_toBottomOf="@id/tv_feels_like_info"
            tools:text="Info" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_back"
        style="@style/WeatherButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_details_btn_back"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>